--- a/text.css
+++ b/text.css
@@ -1,1 +1,25 @@
+body {
+background-color: #83B692;
+font-weight: bold;
+font-size: 40px;
+margin: 50px;
+}
+
+p {
+height: 40px;
+font-weight: bold;
+font-size: 40px;
+line-height:2;
+position: relative;
+}
+
+header {
+background-color: #DDE392;
+text-align: center
+}
+
+#photo {
+border-radius: 100%;
+height: 100px;
+}
 
